--- a/main.ipynb
+++ b/main.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "id": "105fda7c-41a7-4c02-8dc6-9219533e14b9",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "id": "06c55c10-f647-46a2-8898-7ff4bce576ca",
    "metadata": {},
    "outputs": [
@@ -59,17 +59,16 @@
     }
    ],
    "source": [
-    "alpha, beta = 10E-7, 0.0000001\n",
-    "wt = np.zeros(d) \n",
-    "wt1 = np.zeros(d)\n",
+    "alpha, beta = 10E-7, 0.80\n",
+    "w_old, w_curr = np.zeros(d), np.zeros(d)\n",
     "\n",
-    "for i in range(100): \n",
-    "    grad = (1 / n) * (X_train.T @ X_train @ wt1 - X_train.T @ y_train)\n",
-    "    wt2 = wt1 + beta * (wt - wt1) - alpha * grad\n",
-    "    wt = np.copy(wt1)\n",
-    "    wt1 = np.copy(wt2)\n",
+    "for i in range(1000): \n",
+    "    grad = (1 / n) * (X_train.T @ (X_train @ w_curr - y_train))\n",
+    "    w_next = w_curr + beta * (w_curr - w_old) - alpha * grad\n",
+    "    w_old = w_curr\n",
+    "    w_curr = w_next\n",
     "\n",
-    "w = wt2\n",
+    "w = w_curr\n",
     "print('w =', w)"
    ]
   },
@@ -92,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "id": "c5755f3f-355b-46ee-9253-f2e2ef29a441",
    "metadata": {},
    "outputs": [
@@ -100,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE = 5.913107707840612e-13\n"
+      "RMSE = 8.334632620007887e-14\n"
      ]
     }
    ],
@@ -120,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "id": "bc422ab9-ecc2-4f9f-9e3e-687bf68b505c",
    "metadata": {},
    "outputs": [],
